# Line-Encoding-Schemes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  line_encoding.py  line_encoding_visualizer.html  pyproject.toml
.github/workflows/: deploy.yml
src/line_encoding/: __init__.py  cli.py
src/line_encoding/encoders/: base.py
src/line_encoding/visualization/: plotter.py
